          by Stephane F8CFE to change rig frequency via the mouse wheel.
      22) Added <IDLE>NNN macro tag; causes signal to idle for NNN seconds
          before sending macro text.  Use:
          
          <TX><IDLE>05
          Now is the time for all good men
          <RX><TIMER>20
          
          will generate 5 seconds of idle, the text, and repeat after 20 sec's.

3.03
      1) Changes to socket server to correct shutdown process
      2) Added event logging and an event viewer
      3) Added QRZ cdrom / database location specifier with auto-search
      4) Bug fix for sound on OS X 10.4
      5) Bug fix for Socket Server. Added error checking for listen().
      6) Update to build scripts.  Corrected compiler flags for building 
         universal binary on OS X. Changed to a more reliable way of linking 
         hamlib statically.  Updated app bundling script.
      7) Set tooltip font - tooltip changed to use same font and size selected
         with the command line switch --font.  Set default font sizes on OS X.
      8) Inhibit Tx / Rx of higher speed MFSKpic modes on slower computers
      9) Added color selection for Rx/Tx text panels
             Normal text
             Transmitted text
             Control character text
             Skipped text
             Alternate (quick view) text
             Background
      10) Changed the way that RTS/DTR PTT is used with rig.xml files
      11) Updated regular expression parser
      12) Modified <EXEC> passing of fd's to child processes
      13) Changed "no color" buttons to background vice background2 (white).
          Setting -bg <color> on command line switch now controls the "no color"
          value for the macro buttons.
      14) Fixed macro timer to properly reset if <TIMER> re-invoked during
          timeout period.
      15) Fixed broken access to on-line subscriber Hamlog data base
      16) Removed trailing spaces from frequency field in ADIF file