@@ -127,6 +127,10 @@ extern Fl_Check_Button *chkSlowCpu;
 extern Fl_Group *tabMacros;
 extern Fl_Check_Button *btnUseLastMacro;
 extern Fl_Check_Button *btnDisplayMacroFilename;
+extern Fl_Group *tabMainWindow;
+extern Fl_Counter *cntrWfwidth;
+extern Fl_Counter *cntrWfheight;
+extern Fl_Check_Button *btnDockedScope;
 extern Fl_Group *tabRSid;
 extern Fl_Check_Button *chkTransmitRSid;
 extern Fl_Check_Button *chkRSidWideSearch;
@@ -135,8 +139,6 @@ extern Fl_Value_Input *valCWsweetspot;
 extern Fl_Value_Input *valRTTYsweetspot;
 extern Fl_Value_Input *valPSKsweetspot;
 extern Fl_Check_Button *btnStartAtSweetSpot;
-extern Fl_Group *tabMainWindow;
-extern Fl_Check_Button *btnDockedScope;
 extern Fl_Group *tabModems;
 extern Fl_Tabs *tabsModems;
 extern Fl_Group *tabCW;
