@@ -75,7 +75,7 @@
 //#define DEFAULT_HWFALL 144
 #define DEFAULT_HWFALL 124
 #define DEFAULT_HNOM 500
-#define Wwfall		(DEFAULT_HNOM + 2 * BEZEL)
+//#define Wwfall		(DEFAULT_HNOM + 2 * BEZEL)
 #define DEFAULT_WNOM (Wwfall + 2* DEFAULT_SW)
 
 //#define EMC_HWFALL 144
@@ -86,6 +86,7 @@ extern int IMAGE_WIDTH;
 extern int Hwfall;
 extern int HNOM;
 extern int WNOM;
+extern int Wwfall;
 
 #define Hmenu		22
 #define Hqsoframe	48
